# pywebexpo

./: .gitignore  CLAUDE.md  LICENSE  README.md  bench.json  bench_error_known.json  bench_noerror.json  pixi.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yml
examples/: informedvar_basic.ipynb
notebooks/: between_worker_notebook copy.ipynb  informedvar_error_speed_test.ipynb  past_data_notebook.ipynb
src/pywebexpo/: __init__.py  bench.py  datapreperation.py  interpretation.py  main.py  model.py  utils.py
src/pywebexpo/seg_models/: __init__.py  informedvar.py
tests/: informedvar_test.py
